# ReadingLicensePlates

./: CMakeLists.txt  ConsoleApplication2.cpp  README.md  plate_utils.cpp  plate_utils.h
Old files/: main.cpp  main2.cpp  main3.cpp  provinces.cpp
